[package]
name = "deletefs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
walkdir = "2"
fs_extra = "1.3.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
threadpool = "1.0"
num_cpus = "1.0"
